fixed links going back to sivers.org

--- a/index.html
+++ b/index.html
@@ -44,41 +44,44 @@
                 Me in 10 seconds
             </h2>
             <p>
-                I’ve been a <a href="/music">musician</a>, <a href="http://artificialrecords.com/">producer</a>, <a
-                    href="http://professionalpests.com/">circus performer</a>, <a href="/a">entrepreneur</a>, <a href="/presentations">TED
-                    speaker</a>, and <a href="/we14">book publisher</a>.
+                I’ve been a <a href="https://sivers.org/music">musician</a>, <a href="http://artificialrecords.com/">producer</a>,
+                <a href="http://professionalpests.com/">circus performer</a>, <a href="https://sivers.org/a">entrepreneur</a>,
+                <a href="https://sivers.org/presentations">TED
+                    speaker</a>, and <a href="https://sivers.org/we14">book publisher</a>.
             </p>
             <p>
                 I started <a href="https://www.cdbaby.com/">CDBaby</a> and <a href="https://www.hostbaby.com/">HostBaby</a>
                 long ago.
-                My <a href="/a">short audio/book about it</a> tells you everything I learned while starting, growing,
+                My <a href="https://sivers.org/a">short audio/book about it</a> tells you everything I learned while
+                starting, growing,
                 and selling the business.
             </p>
             <p>
                 <a href="http://typelogic.com/intj.html">Introvert</a>,
-                <a href="/slow">slow thinker</a>,
-                and love finding a <a href="/counter">different point of view</a>.
+                <a href="https://sivers.org/slow">slow thinker</a>,
+                and love finding a <a href="https://sivers.org/counter">different point of view</a>.
             </p>
             <p>
-                California native, I now <a href="/local">live</a> in <a href="/singapore">Singapore</a>.
+                California native, I now <a href="https://sivers.org/local">live</a> in <a href="https://sivers.org/singapore">Singapore</a>.
             </p>
             <h2>
                 Me in 10 minutes?
             </h2>
             <p>
-                See <a href="/about">my “about” page</a>.
+                See <a href="https://sivers.org/about">my “about” page</a>.
             </p>
             <h2>
                 What am I doing now?
             </h2>
             <p>
-                See <a href="/now">my “now” page</a>.
+                See <a href="https://sivers.org/now">my “now” page</a>.
             </p>
             <h2>
                 Contact me?
             </h2>
             <p>
-                See <a href="/contact">why you should</a>, though read my <a href="/faq">frequently asked questions</a>,
+                See <a href="https://sivers.org/contact">why you should</a>, though read my <a href="https://sivers.org/faq">frequently
+                    asked questions</a>,
                 first.
             </p>
         </section>
@@ -86,39 +89,39 @@
         <section>
             <h2>Books</h2>
             <dl>
-                <dt><a href="/a">Anything You Want</a> <span>(2011)</span></dt>
+                <dt><a href="https://sivers.org/a">Anything You Want</a> <span>(2011)</span></dt>
                 <dd>40 lessons for a new kind of entrepreneur: my tales of starting, building, and selling CD Baby</dd>
-                <dt><a href="/m">Your Music and People</a> <span>(2018)</span></dt>
+                <dt><a href="https://sivers.org/m">Your Music and People</a> <span>(2018)</span></dt>
                 <dd>a philosophy for musicians (and normal people) of getting your work to the world by being creative,
                     considerate, resourceful, descriptive, focused, and connected</dd>
-                <dt><a href="/n">Hell Yeah or No</a> <span>(2018)</span></dt>
+                <dt><a href="https://sivers.org/n">Hell Yeah or No</a> <span>(2018)</span></dt>
                 <dd>a collection of thoughts around re-defining yourself, changing focus, and saying yes to less</dd>
-                <dt><a href="/h">How to Live</a> <span>(2018)</span></dt>
+                <dt><a href="https://sivers.org/h">How to Live</a> <span>(2018)</span></dt>
                 <dd>radically different approaches to life, in succinct directives</dd>
             </dl>
         </section>
 
         <section>
-            <h2>Newest Articles <small><a href="/blog">see all</a></small></h2>
+            <h2>Newest Articles <small><a href="https://sivers.org/blog">see all</a></small></h2>
             <ul>
-                <li><a href="/contrib">You don’t need confidence, just contribution.</a></li>
-                <li><a href="/unlearning">Unlearning</a></li>
-                <li><a href="/openbsd">OpenBSD 6.3 : why and how</a></li>
-                <li><a href="/bfaq">about my book notes</a></li>
-                <li><a href="/mfg">Moving for good</a></li>
-                <li><a href="/facebook">Why I’m not on Facebook</a></li>
+                <li><a href="https://sivers.org/contrib">You don’t need confidence, just contribution.</a></li>
+                <li><a href="https://sivers.org/unlearning">Unlearning</a></li>
+                <li><a href="https://sivers.org/openbsd">OpenBSD 6.3 : why and how</a></li>
+                <li><a href="https://sivers.org/bfaq">about my book notes</a></li>
+                <li><a href="https://sivers.org/mfg">Moving for good</a></li>
+                <li><a href="https://sivers.org/facebook">Why I’m not on Facebook</a></li>
             </ul>
         </section>
 
         <section>
-            <h2>Popular Articles <small><a href="/blog">see all</a></small></h2>
+            <h2>Popular Articles <small><a href="https://sivers.org/blog">see all</a></small></h2>
             <ul>
-                <li><a href="/ff">Leadership Lessons from Dancing Guy</a></li>
-                <li><a href="/hellyeah">No yes. Either HELL YEAH or no.</a></li>
-                <li><a href="/multiply">Ideas are just a multiplier of execution</a></li>
-                <li><a href="/trust">Why I gave away my company to charity</a></li>
-                <li><a href="/local">You don’t have to be local</a></li>
-                <li><a href="/obvious">Obvious to you. Amazing to others.</a></li>
+                <li><a href="https://sivers.org/ff">Leadership Lessons from Dancing Guy</a></li>
+                <li><a href="https://sivers.org/hellyeah">No yes. Either HELL YEAH or no.</a></li>
+                <li><a href="https://sivers.org/multiply">Ideas are just a multiplier of execution</a></li>
+                <li><a href="https://sivers.org/trust">Why I gave away my company to charity</a></li>
+                <li><a href="https://sivers.org/local">You don’t have to be local</a></li>
+                <li><a href="https://sivers.org/obvious">Obvious to you. Amazing to others.</a></li>
             </ul>
         </section>
 
@@ -128,7 +131,7 @@
                 If you want the announcements and opportunities that I never post publicly, get on my private email
                 list, here:
             </p>
-            <form action="/list" method="post">
+            <form action="https://sivers.org/list" method="post">
                 <label for="name">Your Name</label>
                 <input type="text" name="name" id="name" value="">
                 <label for="email">Your Email (kept private! never shared.)</label>
@@ -139,9 +142,9 @@
         </section>
 
         <section>
-            <h2>Projects <small><a href="/projects">see all projects</a></small></h2>
+            <h2>Projects <small><a href="https://sivers.org/projects">see all projects</a></small></h2>
             <dl>
-                <dt><a href="/book">Book Notes</a></dt>
+                <dt><a href="https://sivers.org/book">Book Notes</a></dt>
                 <dd>detailed notes from the last 250+ books I’ve read</dd>
                 <dt><a href="https://nownownow.com/">Now Now Now</a></dt>
                 <dd>a collection of sites that have a “what I’m doing now” page</dd>
@@ -156,11 +159,11 @@
             <dl>
                 <dt><a href="https://www.ted.com/speakers/derek_sivers">TED (ted.com)</a></dt>
                 <dd>3 short talks from the TED Conference.</dd>
-                <dt><a href="/anything">Anything You Want</a></dt>
+                <dt><a href="https://sivers.org/anything">Anything You Want</a></dt>
                 <dd>7 short animations from my book “Anything You Want”.</dd>
-                <dt><a href="/wds">Uncommon Sense</a></dt>
+                <dt><a href="https://sivers.org/wds">Uncommon Sense</a></dt>
                 <dd>Entrepreneur lessons learned from starting, building, and selling CD Baby.</dd>
-                <dt><a href="/presentations">Conference Presentations</a></dt>
+                <dt><a href="https://sivers.org/presentations">Conference Presentations</a></dt>
                 <dd>Talks from other conferences, all subjects.</dd>
             </dl>
         </section>
@@ -184,13 +187,13 @@
         </section>
 
         <section>
-            <h2>Tweets <small><a href="/tweets">see all tweets</a></small></h2>
+            <h2>Tweets <small><a href="https://sivers.org/tweets">see all tweets</a></small></h2>
             <dl>
                 <dt>September 8</dt>
                 <dd>The code to my sites and database are now mirrored on GitHub: <a href="https://github.com/sivers">https://github.com/sivers</a>
                     Use anything you like.</dd>
                 <dt>August 6</dt>
-                <dd>You don&#39;t need confidence, just contribution. <a href="https://sivers.org/contrib">https://sivers.org/contrib</a></dd>
+                <dd>You don't need confidence, just contribution. <a href="https://sivers.org/contrib">https://sivers.org/contrib</a></dd>
                 <dt>August 2</dt>
                 <dd>My definition of success: <a href="http://grantpirosblog.com/a-definition-of-success/">http://grantpirosblog.com/a-definition-of-success/</a>
                     (thanks to Grant Piros for putting it succinctly)</dd>
